# oakengine

./: .gitignore  LICENSE  README.md  SConstruct  TODO  gmon.out  gprof.output  log  meson.build  meson_options.txt  sandbox.trace
core/: SCsub  allocators.cpp  allocators.h  audio_manager.cpp  audio_manager.h  binding.cpp  binding.h  collision.cpp  collision.h  component.h  component_storage.cpp  component_storage.h  components.cpp  components.h  config.h  container.h  core_components.cpp  core_components.h  debug_vars.cpp  debug_vars.h  debugger.cpp  debugger.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_cache.cpp  entity_cache.h  entity_id.cpp  entity_id.h  event.h  event_channel.h  event_comp.cpp  event_comp.h  event_manager.cpp  event_manager.h  event_queue.cpp  event_queue.h  events.cpp  events.h  (+66 more)
core/graphics/: api.h  attribute_layout.h  batch.h  buffer.cpp  buffer.h  buffer_storage.cpp  buffer_storage.h  camera.cpp  camera.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gl_api.cpp  gl_api.h  gl_buffer.cpp  gl_buffer.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  particle_system.cpp  particle_system.h  pipeline.cpp  pipeline.h  render_system.cpp  render_system.h  renderable.h  renderer.h  shader.cpp  shader.h  (+14 more)
core/graphics/opengl/: gl_api.cpp  gl_api.h  gl_buffer.cpp  gl_buffer.h  gl_buffer_storage.cpp  gl_buffer_storage.h  gl_frame_renderer.cpp  gl_frame_renderer.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_material.h  gl_renderer.cpp  gl_renderer.h  gl_shader.cpp  gl_shader.h  gl_sprite_renderer.cpp  gl_sprite_renderer.h  gl_texture.cpp  gl_texture.h  gl_texture_atlas.cpp  gl_texture_atlas.h  gl_vertex_array.cpp  gl_vertex_array.h
core/graphics/shaders/basic/: frag.spv  opengl.frag  vulkan.vert
core/graphics/shaders/blend/: opengl.frag  opengl.vert
core/graphics/shaders/deferred/blend/: frag.glsl  vert.glsl
core/graphics/shaders/deferred/box/: frag.glsl  vert.glsl
core/graphics/shaders/deferred/fxaa/: frag.glsl  vert.glsl
core/graphics/shaders/deferred/geometry/: frag.glsl  vert.glsl
core/graphics/shaders/deferred/light/: frag.glsl
core/graphics/shaders/deferred/particle/: frag.glsl  vert.glsl
core/graphics/shaders/deferred/sao/: ao.glsl  blur.glsl  minify.glsl  reconstruct.glsl  vert.glsl
core/graphics/shaders/deferred/ssao/: frag.glsl  vert.glsl
core/graphics/shaders/font/: opengl.frag
core/graphics/shaders/forward/blend/: frag.glsl  opengl.frag  vert.glsl
core/graphics/shaders/forward/font/: frag.glsl  opengl.frag  opengl.vert  vert.glsl
core/graphics/shaders/forward/pass2d/: frag.glsl  opengl.vert  vert.glsl
core/graphics/shaders/forward/pass3d/: opengl.frag  opengl.vert
core/graphics/shaders/forward/pbr/: frag.glsl  vert.glsl
core/graphics/shaders/fullscreen/: opengl.frag  vert.glsl
core/graphics/shaders/geometry/: frag.glsl  vert.glsl
core/graphics/shaders/pass2d/: opengl.vert
core/graphics/shaders/pass3d/: opengl.frag  opengl.vert  vert.spv
core/graphics/vulkan/: api.cpp  api.h  vbuffer.cpp  vcommand_pool.cpp  vdescriptor_pool.cpp  vdescriptor_pool.h  vdevice.cpp  vdevice.h  vframebuffer.cpp  vframebuffer.h  vhandle.h  vimage.cpp  vimage.h  vk_api.h  vk_renderer.cpp  vk_renderer.h  vmemory.cpp  vmemory.h  vpipeline.cpp  vpipeline.h  vrender_pass.cpp  vrender_pass.h  vsemaphore.cpp  vshader.cpp  vshader.h
core/math/: mat.cpp  mat.h  quat.cpp  quat.h  util.cpp  util.h  vec.cpp  vec.h
core/memory/: alloc.cpp  alloc.h  allocator.cpp  allocator.h  allocators.cpp  allocators.h  block.h  container.h  memory_literals.h  memory_manager.cpp  memory_manager.h  oak_alloc.cpp  oak_alloc.h  pointer.h
core/network/: main.cpp  network_manager.cpp  network_manager.dont_compile  network_manager.h  packet.h  socket.cpp  socket.h  socket_address.cpp  socket_address.h  socket_listener.cpp  socket_listener.h  win_sock.cpp  win_sock.h
core/script/: binding.cpp  binding.dontcompile  binding.h  entity_system.lua  lua_puper.cpp  lua_puper.h  luah.cpp  luah.h
core/util/: allocator.cpp  allocator.h  array.h  buffer_puper.cpp  buffer_puper.h  byte_buffer.cpp  byte_buffer.h  byte_buffer_puper.cpp  byte_buffer_puper.h  file_buffer.cpp  file_buffer.h  file_puper.cpp  file_puper.h  file_util.h  hash_map.h  mpl.h  ptr_util.h  puper.cpp  puper.h  pupper.cpp  pupper.h  stream.cpp  stream.h  stream_puper.cpp  stream_puper.h  string.cpp  string.h  string_util.h  type_handle.h  type_handle_storage.h  type_id.h  type_manager.h  typeid.h  types.h
lib/: SCsub  meson.build
lib/enet-1.3.13/.deps/: callbacks.Plo  compress.Plo  host.Plo  list.Plo  packet.Plo  peer.Plo  protocol.Plo  unix.Plo
lib/enet-1.3.13/.libs/: libenet.lai  libenet.so.7  libenet.so.7.0.1
lib/glad/: glad-debug.c  glad.c
lib/glad/debug-include/glad/: glad.h
lib/glad/include/glad/: glad.h
lib/glfw-3.2.1/src/: monitor.c  wl_init.c
lib/soundio/src/: config.h
platform/: SCsub  components.cpp  components.h  console.cpp  console.h  main.cpp  meson.build  poly_renderer.cpp  poly_renderer.h  render_system.cpp  render_system.h  save
platform/poly_shader/: frag.glsl  vert.glsl
sandbox/: SCsub  binding.cpp  binding.h  chunk.cpp  chunk.h  component_ext.cpp  component_ext.h  component_extentions.cpp  component_extentions.h  components.cpp  components.h  deferred_renderer.cpp  deferred_renderer.h  event_ext.cpp  event_ext.h  events.cpp  events.h  forward_renderer.cpp  forward_renderer.h  gui_renderer.cpp  gui_renderer.h  lightRenderer.cpp  lightRenderer.h  light_renderer.cpp  light_renderer.h  main.cpp  meson.build  pipeline.h  render_system.cpp  render_system.h  renderer.h  save_manager.cpp  save_manager.h  sprite_renderer.cpp  sprite_renderer.h  systems.cpp  systems.h  (+4 more)
tests/: SCsub  benchmark.cpp  buffer.cpp  equeue.cpp  filesystem.cpp  main.cpp  math.cpp  meson.build  resource_handler.cpp  task.cpp  voxel.cpp
tests/res/data/options/: test
tests/res/options/: engine
tests/res/options/subdir/settings/how_to_fly/: flying101
(+142 files in other folders)
